still trying to fix transform on mobile

--- a/melissa.css
+++ b/melissa.css
@@ -41,7 +41,7 @@ li {
   justify-content: space-around;
   align-content: center;
   width: 100%;
-  -webkit-transition-property: -webkit-transform;
+  -webkit-transition-property: transform;
   -webkit-transition-timing-function: ease-out;
   -webkit-transition-duration: 400ms;
   -webkit-transition-delay: 700ms;
